update and added new files of code

--- a/reseach/data_ingestion.ipynb
+++ b/reseach/data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "54318cdc",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "e81b663e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\sunil kumar\\\\OneDrive - AlgoDox Technology PVT LTD\\\\Desktop\\\\dl_ops_champios\\\\vinipro\\\\reseach'"
+       "'c:\\\\Users\\\\sunil kumar\\\\OneDrive - AlgoDox Technology PVT LTD\\\\Desktop\\\\dl_ops_champios'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "4403ee5e",
    "metadata": {},
    "outputs": [],
@@ -43,17 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "11af66e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\sunil kumar\\\\OneDrive - AlgoDox Technology PVT LTD\\\\Desktop\\\\dl_ops_champios\\\\vinipro'"
+       "'c:\\\\Users\\\\sunil kumar\\\\OneDrive - AlgoDox Technology PVT LTD\\\\Desktop'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "181cf825",
    "metadata": {},
    "outputs": [],
@@ -72,8 +72,6 @@
     "# Data class it import a python tools called data class or no need to manually packge , ceate class \n",
     "# that only store data , It reduces the amout of code your need to write \n",
     "# no need to write __init__ method , __repr__ method , __eq__ method\n",
-    "\n",
-    "\n",
     "\n",
     "# pathlib is impor tthe path class , which helps to your work with file and folder paths to eas;u amd in aclean way for al operating system.\n",
     "\n",
@@ -83,27 +81,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "86f26cc8",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
-    "from pathlib import Path\n",
+    "from pathlib import Path \n",
     "\n",
-    "\n",
-    "@dataclass(frozen=True) # if any misstake care\n",
-    "class DataIngestiionConfig:\n",
-    "    root_dir: Path\n",
-    "    source_url: str\n",
-    "    local_data_file: Path\n",
-    "    unzip_dir: Path\n",
-    "    "
+    "@dataclass(frozen=True)\n",
+    "class DataIngestionConfig:\n",
+    "    root_dir: Path \n",
+    "    source_URL: str \n",
+    "    local_data_file: Path \n",
+    "    unzip_dir: Path "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "041eca87",
    "metadata": {},
    "outputs": [
@@ -114,14 +110,14 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcnnClassifier\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcomponents\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcnnClassifier\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcommon\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m read_yaml, create_directories\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcnnClassifier\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconstants\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m * \n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcnnClassifier\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcommon\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m read_yaml , create_directories \n",
       "\u001b[31mImportError\u001b[39m: cannot import name 'read_yaml' from 'src.cnnClassifier.utils.common' (c:\\Users\\sunil kumar\\OneDrive - AlgoDox Technology PVT LTD\\Desktop\\dl_ops_champios\\vinipro\\src\\cnnClassifier\\utils\\common.py)"
      ]
     }
    ],
    "source": [
-    "from src.cnnClassifier.components import *\n",
-    "from src.cnnClassifier.utils.common import read_yaml, create_directories\n"
+    "from src.cnnClassifier.constants import * \n",
+    "from src.cnnClassifier.utils.common import read_yaml , create_directories "
    ]
   },
   {
@@ -132,21 +128,102 @@
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
-    "    def __inti__(\n",
-    "        self,\n",
-    "        config_filepath : CONFIG_FILE_PATH,\n",
-    "        params_filepath : PARAMS_FILE_PATH\n",
-    "         \n",
-    "    )-> None:\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            config_filepath = CONFIG_FILE_PATH,\n",
+    "            params_filepath = PARAMS_FILE_PATH\n",
+    "    ):\n",
     "        self.config = read_yaml(config_filepath)\n",
-    "        self.params = read_yaml(params_filepath)\n",
-    "        \n",
-    "        create_directories([self.config.artifacts_root])\n",
-    "        \n",
-    "    def get_data_ingestion_config(self) ->None:\n",
-    "        config= self.config.data_ingestion\n",
-    "        \n",
-    "        "
+    "        self.params = read_yaml(params_filepath) \n",
+    "\n",
+    "        create_directories([self.config.artifacts_root]) \n",
+    "\n",
+    "    def get_data_ingestion_config(self):\n",
+    "        config = self.config.data_ingestion \n",
+    "\n",
+    "        create_directories([config.root_dir]) \n",
+    "        data_ingestion_config = DataIngestionConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            source_URL=config.source_URL,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir = config.unzip_dir \n",
+    "\n",
+    "        )\n",
+    "\n",
+    "        return data_ingestion_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9c48d47",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'get_size' from 'src.cnnClassifier.utils.common' (c:\\Users\\sunil kumar\\OneDrive - AlgoDox Technology PVT LTD\\Desktop\\dl_ops_champios\\vinipro\\src\\cnnClassifier\\utils\\common.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mzipfile\u001b[39;00m \n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcnnClassifier\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m logger \n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcnnClassifier\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcommon\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_size \n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'get_size' from 'src.cnnClassifier.utils.common' (c:\\Users\\sunil kumar\\OneDrive - AlgoDox Technology PVT LTD\\Desktop\\dl_ops_champios\\vinipro\\src\\cnnClassifier\\utils\\common.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "import urllib.request as request \n",
+    "import zipfile \n",
+    "from src.cnnClassifier import logger \n",
+    "from src.cnnClassifier.utils.common import get_size "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a1a9d9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataIngestion:\n",
+    "    def __init__(self,config: DataIngestionConfig):\n",
+    "        self.config = config \n",
+    "\n",
+    "    def download_file(self):\n",
+    "        if not os.path.exists(self.config.local_data_file):\n",
+    "            filename, headers = request.urlretrieve(\n",
+    "                url = self.config.source_URL,\n",
+    "                filename = self.config.local_data_file\n",
+    "            )\n",
+    "\n",
+    "            logger.info(f\"{filename} download! with following info: \\n {headers}\") \n",
+    "        else:\n",
+    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
+    "\n",
+    "\n",
+    "    def extract_zip_file(self):\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path , exist_ok=True) \n",
+    "        with zipfile.ZipFile(self.config.local_data_file , 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "548aa8e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config() \n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file() \n",
+    "except Exception as e :\n",
+    "    raise e "
    ]
   }
  ],
