--- a/reseach/data_ingestion.ipynb
+++ b/reseach/data_ingestion.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e81b663e",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "8a1a9d9d",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,10 @@
     "        unzip_path = self.config.unzip_dir\n",
     "        os.makedirs(unzip_path , exist_ok=True) \n",
     "        with zipfile.ZipFile(self.config.local_data_file , 'r') as zip_ref:\n",
-    "            zip_ref.extractall(unzip_path)"
+    "            zip_ref.extractall(unzip_path)\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
