--- a/reseach/03_prepare_callbacks.ipynb
+++ b/reseach/03_prepare_callbacks.ipynb
@@ -38,8 +38,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../\")"
+    "%pwd\n",
+    "\n",
+    "# C:\\Users\\sunil kumar\\OneDrive - AlgoDox Technology PVT LTD\\Desktop\\dl_ops_champios\\vinipro> how to go this directory\n",
+    "os.chdir(r\"C:\\Users\\sunil kumar\\OneDrive - AlgoDox Technology PVT LTD\\Desktop\\dl_ops_champios\\vinipro\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38a028aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -50,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\sunil kumar\\\\OneDrive - AlgoDox Technology PVT LTD\\\\Desktop\\\\dl_ops_champios\\\\vinipro'"
+       "'C:\\\\Users\\\\sunil kumar\\\\OneDrive - AlgoDox Technology PVT LTD\\\\Desktop\\\\dl_ops_champios\\\\vinipro'"
       ]
      },
      "execution_count": 4,
@@ -69,15 +80,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass\n",
-    "from pathlib import Path\n",
+    "from dataclasses import dataclass \n",
+    "from pathlib import Path \n",
     "\n",
-    "@dataclass(frozen=True)\n",
+    "@dataclass(frozen=True) \n",
+    "\n",
     "class PrepareCallbacksConfig:\n",
-    "    root_dir: Path\n",
-    "    tensorboard_root_log_dir: Path\n",
-    "    checkpoint_model_filepath: Path\n",
-    "    "
+    "    root_dir: Path \n",
+    "    tensorboard_root_log_dir: Path \n",
+    "    checkpoint_model_filepath: Path "
    ]
   },
   {
@@ -87,8 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.cnnClassifier.components import *\n",
-    "from src.cnnClassifier.utils.common import read_yaml, create_directories"
+    "from src.cnnClassifier.constants import * \n",
+    "from src.cnnClassifier.utils.common import read_yaml , create_directories"
    ]
   },
   {
@@ -107,34 +118,34 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "dec74770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path \n",
+    "\n",
+    "CONFIG_FILE_PATH = Path(\"config/config.yaml\") \n",
+    "PARAMS_FILE_PATH = Path(\"params.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "1ada2b16",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'CONFIG_FILE_PATH' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mConfigurationManager\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mdef\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m        \u001b[49m\u001b[43mconfig_filepath\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mCONFIG_FILE_PATH\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m        \u001b[49m\u001b[43mparams_filepath\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mPARAMS_FILE_PATH\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mread_yaml\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig_filepath\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36mConfigurationManager\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mConfigurationManager\u001b[39;00m:\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\n\u001b[32m      3\u001b[39m         \u001b[38;5;28mself\u001b[39m, \n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m         config_filepath = \u001b[43mCONFIG_FILE_PATH\u001b[49m,\n\u001b[32m      5\u001b[39m         params_filepath = PARAMS_FILE_PATH):\n\u001b[32m      6\u001b[39m         \u001b[38;5;28mself\u001b[39m.config = read_yaml(config_filepath)\n\u001b[32m      7\u001b[39m         \u001b[38;5;28mself\u001b[39m.params = read_yaml(params_filepath)\n",
-      "\u001b[31mNameError\u001b[39m: name 'CONFIG_FILE_PATH' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
     "    def __init__(\n",
-    "        self, \n",
-    "        config_filepath = CONFIG_FILE_PATH,\n",
-    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "            self,\n",
+    "            config_filepath = CONFIG_FILE_PATH,\n",
+    "            params_filepath = PARAMS_FILE_PATH\n",
+    "    ):\n",
     "        self.config = read_yaml(config_filepath)\n",
-    "        self.params = read_yaml(params_filepath)\n",
-    "        create_directories([self.config.artifacts_root])\n",
+    "        self.params = read_yaml(params_filepath) \n",
     "\n",
+    "        create_directories([self.config.artifacts_root]) \n",
     "\n",
-    "    \n",
     "    def get_prepare_callback_config(self) -> PrepareCallbacksConfig:\n",
     "        config = self.config.prepare_callbacks\n",
     "        model_ckpt_dir = os.path.dirname(config.checkpoint_model_filepath)\n",
@@ -155,6 +166,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8761167b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "d94593b3",
    "metadata": {},
    "outputs": [],
@@ -168,60 +187,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b2d6d4fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "class PrepareCallback:\n",
-    "    def __init__(self,config:PrepareCallbacksConfig):\n",
+    "    def __init__(self, config: PrepareCallbacksConfig):\n",
     "        self.config = config\n",
-    "        \n",
+    "\n",
+    "\n",
+    "    \n",
     "    @property\n",
     "    def _create_tb_callbacks(self):\n",
     "        timestamp = time.strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
-    "        tb_running_log_dir=os.path.join(\n",
+    "        tb_running_log_dir = os.path.join(\n",
     "            self.config.tensorboard_root_log_dir,\n",
     "            f\"tb_logs_at_{timestamp}\",\n",
     "        )\n",
     "        return tf.keras.callbacks.TensorBoard(log_dir=tb_running_log_dir)\n",
     "    \n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def _create_ckpt_callbacks(self):\n",
     "        return tf.keras.callbacks.ModelCheckpoint(\n",
-    "            filepath = self.config.checkpoint_model_filepath,\n",
-    "            save_best_only = True\n",
+    "            filepath=self.config.checkpoint_model_filepath,\n",
+    "            save_best_only=True\n",
     "        )\n",
-    "    \n",
+    "\n",
+    "\n",
     "    def get_tb_ckpt_callbacks(self):\n",
     "        return [\n",
     "            self._create_tb_callbacks,\n",
     "            self._create_ckpt_callbacks\n",
-    "        ]\n",
-    "        "
+    "        ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1f163060",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ YAML Content: {'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_URL': 'https://github.com/entbappy/Branching-tutorial/raw/master/Chicken-fecal-images.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}, 'prepare_base_model': {'root_dir': 'artifacts/prepare_base_model', 'base_model_path': 'artifacts/prepare_base_model/base_model.h5', 'updated_base_model_path': 'artifacts/prepare_base_model/base_model_updated.h5'}, 'prepare_callbacks': {'root_dir': 'artifacts/prepare_callbacks', 'tensorboard_root_log_dir': 'artifacts/prepare_callbacks/tensorboard_log_dir', 'checkpoint_model_filepath': 'artifacts/prepare_callbacks/checkpoint_dir/model.h5'}}\n",
+      "[2025-08-18 15:03:41,893: INFO: common: YAML file config\\config.yaml loaded successfully]\n",
+      "✅ YAML Content: {'AUGMENTATION': True, 'IMAGE_SIZE': [224, 224, 3], 'BATCH_SIZE': 16, 'INCLUDE_TOP': False, 'EPOCHS': 1, 'CLASSES': 2, 'WEIGHTS': 'imagenet', 'LEARNING_RATE': 0.01}\n",
+      "[2025-08-18 15:03:41,900: INFO: common: YAML file params.yaml loaded successfully]\n",
+      "[2025-08-18 15:03:41,902: INFO: common: created directory at: artifacts]\n",
+      "[2025-08-18 15:03:41,906: INFO: common: created directory at: artifacts\\prepare_callbacks\\checkpoint_dir]\n",
+      "[2025-08-18 15:03:41,909: INFO: common: created directory at: artifacts\\prepare_callbacks\\tensorboard_log_dir]\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    prepare_callbacks_config= config.get_prepare_callback_config()\n",
-    "    prepare_callbacks= PrepareCallback(config=prepare_callbacks_config)\n",
-    "    callback_list= prepare_callbacks.get_tb_ckpt_callbacks()\n",
-    "except  Exception as e:\n",
+    "    prepare_callbacks_config = config.get_prepare_callback_config()\n",
+    "    prepare_callbacks = PrepareCallback(config=prepare_callbacks_config)\n",
+    "    callback_list = prepare_callbacks.get_tb_ckpt_callbacks()\n",
+    "    \n",
+    "except Exception as e:\n",
     "    raise e"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43c0065d",
+   "id": "101ab101",
    "metadata": {},
    "outputs": [],
    "source": []
